--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -27,7 +27,7 @@
 /* @import url('./'); */
 
 /* <!---- Top sellers  -----> */
-@import url('./top-sellers.css');
+/* @import url('./'); */
 
 /* <!---- Reviews  -----> */
 /* @import url('./'); */
