--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,7 +24,7 @@
 /* @import url('./'); */
 
 /* <!---- Our products  -----> */
-/* @import url('./'); */
+@import url('./');
 
 /* <!---- Top sellers  -----> */
 /* @import url('./'); */
