--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -47,3 +47,6 @@
 
 /* <!---- Explore our new chocolate first ----> */
 /* @import url('./'); */
+
+/* ----- btn-scroll-header ------ */
+@import url('./btn-scroll-header.css');
