--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,6 +1,6 @@
 <section class="sellers">
   <div class="container">
-    <h2 class="sellers-title"><span>Top</span> Sellers</h2>
+    <h2 class="sellers-title title"><span>Top</span> Sellers</h2>
     <ul class="sellers-list">
       <li class="sellers-item">
         <img
@@ -13,6 +13,11 @@
           width="368"
           height="464"
         />
+        <p class="sellers-item-description">
+          Crazy enough chocolate originates from a bean just like the coffee
+          bean called Cacao. Cacao has been around for thousands of years and
+          was first discovered by the Native American tribe called the Mayans.
+        </p>
       </li>
       <li class="sellers-item">
         <img
@@ -37,6 +42,7 @@
           width="368"
           height="464"
         />
+        <button type="button" class="sellers-btn btn" data-modal-open>Buy now</button>
       </li>
     </ul>
   </div>
