--- a/src/css/basic-styles.css
+++ b/src/css/basic-styles.css
@@ -102,6 +102,17 @@ body {
   cursor: pointer;
 }
 
+.title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+
+  margin-bottom: 32px;
+}
+
 .container {
   width: 100%;
   margin: 0 auto;
