--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,10 +24,10 @@
 /* @import url('./'); */
 
 /* <!---- Our products  -----> */
-/* @import url('./'); */
+ @import url('./our-products.css');
 
 /* <!---- Top sellers  -----> */
-@import url('./top-sellers');
+@import url('./top-sellers.css');
 
 /* <!---- Reviews  -----> */
 /* @import url('./'); */
