--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,7 +30,7 @@
 @import url('./top-sellers');
 
 /* <!---- Reviews  -----> */
-/* @import url('./'); */
+@import url('./reviews.css');
 
 /* <!---- Subscribe -----> */
 /* @import url('./'); */
