--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -1,5 +1,5 @@
 .our-products-second-title {
-  color: #FD9222;
+  color: var(--accent-color);
 }
 
 .product-card {
@@ -21,33 +21,31 @@
 }
 
 .chocolate-type {
-  font-style: normal;
   font-size: 12px;
 
-  color: rgba(17, 17, 17, 0.7);
+  color: var(--pr-description-color);
 }
 
 .chocolate-taste {
   margin-bottom: 2px;
-  font-style: normal;
   font-weight: 600;
   font-size: 18px;
   text-transform: uppercase;
 
-  color: #111111;
+  color: var(--sec-title-color);
 }
 
 .chocolate-price {
   padding: 8px 20px;
-  background: #FAFAFA;
-  border: 1px solid rgba(17, 17, 17, 0.1);
+  background: var(--bg-price-color);
+  border: 1px solid var(--bg-circle-color);
   border-radius: 100px;
   cursor: pointer;
   font-weight: 600;
   font-size: 14px;
   line-height: 1.5;
 
-  color: #111111;
+  color: var(--sec-title-color);
 }
 
 .our-products{
@@ -82,8 +80,8 @@
   justify-content: center;
   flex-direction: column;
   height: 100%;
-  background: #FFFFFF;
-  border: 1px solid rgba(17, 17, 17, 0.1);
+  background: var(--pr-title-color);
+  border: 1px solid var(--bg-circle-color);
   border-radius: 15px;
   padding: 32px 20px;
 }
@@ -103,7 +101,7 @@
 }
 
 .swiper-pagination-bullet-active {
-  background: #FD9222;
+  background: var(--accent-color);
   width: 28px;
   border-radius: 13px;
 }
