--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -48,9 +48,9 @@
   color: var(--sec-title-color);
 }
 
-.our-products{
-  padding-top: calc(77px/2);
-  padding-bottom: calc(67px/2);
+.our-products {
+  padding-top: calc(77px / 2);
+  padding-bottom: calc(67px / 2);
 }
 
 .container-slider {
@@ -91,6 +91,18 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .our-products {
+    padding: calc(100px / 2) 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-products {
+    padding: calc(128px / 2) 0;
+  }
 }
 
 
