--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -33,7 +33,7 @@
 /* @import url('./'); */
 
 /* <!---- Subscribe -----> */
-/* @import url('./'); */
+@import url('./subscribe.css');
 
 /* <!---- Footer -----> */
 /* @import url('./'); */
