--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -9,15 +9,12 @@
 }
 
 .subscribe-title {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
     font-size: 24px;
-    line-height: 28px;
+    line-height: 1.16;
     text-align: center;
     letter-spacing: -0.03em;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: var(--pr-title-color);
     padding-top: 72px;
     padding-bottom: 24px;
     width: 378px;
@@ -25,27 +22,22 @@
 }
 
 .text-subscribe {
-    font-family: 'Montserrat';
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.28;
     text-align: center;
     letter-spacing: -0.02em;
-    color: #FFFFFF;
+    color: var(--pr-title-color);
     padding-bottom: 24px;
     width: 467px;
     margin: 0 auto;
 }
 
 .subscribe-btn {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 600;
     font-size: 18px;
-    line-height: 22px;
-    color: #FFFFFF;
-    background: #FD9222;
+    line-height: 1.22;
+    color: var(--pr-title-color);
+    background: var(--accent-color);
     border-radius: 100px;
     border: none;
     display: block;
@@ -55,5 +47,89 @@
 .subscribe-btn:hover,
 .subscribe-btn:focus {
     background: #FCF1E0;
-    color: #FD9222;
+    color: var(--accent-color);
+}
+
+@media screen and (min-width: 375px) {
+    .subsribe-section {
+        max-width: 375px;
+    }
+
+    @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
+    .hero-section{
+        background-image: url(../img/subscribe/subcribe_mobile_2x.jpg);
+    }
+    }
+
+    .text-subscribe{
+        width: 326px;
+    }
+
+    .subscribe-title {
+    font-size: 20px;
+    line-height: 1.2;
+    padding-top: 62px;
+    width: 291px;
+    }
+
+    .subscribe-btn {
+    font-size: 14px;
+    line-height: 1.21;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .subsribe-section {
+        max-width: 768px;
+    }
+
+    .text-subscribe{
+        width: 467px;
+    }
+
+    .subscribe-title {
+    font-size: 24px;
+    line-height: 1.16;
+    padding-top: 72px;
+    width: 378px;
+    }
+
+    .subscribe-btn {
+    font-size: 18px;
+    line-height: 1.22;
+    }
+
+     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
+    .hero-section{
+        background-image: url(../img/subscribe/subcribe_tablet_2x.jpg);
+    }
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .subsribe-section {
+        max-width: 1199px;
+    }
+
+    .text-subscribe{
+    width: 467px;
+    }
+
+    .subscribe-title {
+    font-size: 24px;
+    line-height: 1.16;
+    padding-top: 72px;
+    width: 378px;
+    }
+
+    .subscribe-btn {
+    font-size: 18px;
+    line-height: 1.22;
+    }
+
+        @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
+    .hero-section{
+        background-image: url(../img/subscribe/subcribe_desk_2x.jpg);
+    }
+    }
 }
