--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,5 +1,5 @@
 <section class="subsribe-section">
-  <h1 class="subscribe-title">EXPLORE OUR NEW CHOCOLATE FIRST</h1>
+  <h1 class="subscribe-title title">EXPLORE OUR NEW CHOCOLATE FIRST</h1>
   <p class="text-subscribe">
     From the velvety texture to the rich and complex flavor, our New Chocolate
     is a true indulgence that will leave you craving more. Made with only the
