--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -84,7 +84,7 @@
             <a href="#" class="item-nav">How it`s made</a>
           </li>
           <li class="nav-list">
-            <a href="" class="item-nav">Our producrs</a>
+            <a href="#" class="item-nav">Our producrs</a>
           </li>
           <li class="nav-list">
             <a href="#" class="item-nav">Top sellers</a>
