--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@
 @import url('./header.css');
 
 /* <!------- Hero  -------> */
-/* @import url('./'); */
+@import url('./hero.css');
 
 /* <!---- Advantages  ----> */
 /* @import url('./'); */
