--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,13 +1,13 @@
 .footer-section {
-    background-color: rgba(30, 24, 35, 1);
+    background-color: var(--sec-hover-color);
 }
 
 .footer-container {
     margin-left: auto;
     margin-right: auto;
     max-width: 375px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-bottom: 32px;
     padding-top: 32px;
 }
@@ -20,7 +20,7 @@
     font-size: 24px;
     font-weight: 500;
     line-height: 1.16;
-    color: #fff;
+    color: var(--pr-title-color);
     width: 300px;
     margin-bottom: 32px;
 }
@@ -33,7 +33,7 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.28;
-    color: #fff;
+    color: var(--pr-title-color);
     margin-bottom: 14px;
     letter-spacing: -0.02em;
 }
@@ -49,7 +49,7 @@
 
 .footer-instagram,
 .footer-twitter {
-    color: #fff;
+    color: var(--pr-title-color);
 }
 
 .footer-auth-nav {
@@ -60,7 +60,7 @@
 
 .footer-auth-nav .footer-link {
     font-size: 14px;
-    color: #fff;
+    color: var(--pr-title-color);
     letter-spacing: -0.02em;
     text-decoration: none;
 }
@@ -69,7 +69,7 @@
     content: '';
     width: 335px;
     height: 1px;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.1);
     display: inline-block;
     margin-bottom: 32px;
 }
@@ -84,11 +84,14 @@
     font-size: 14px;
     font-weight: 500;
     line-height: 1.14;
-    color: #fff;
+    color: var(--pr-title-color);
     letter-spacing: -0.02em;
     text-decoration: none;
 }
 
+.footer-link {
+    transition: color var(--transition-dur-and-func);
+}
 .footer-link:is(:hover, :focus) {
     color: var(--accent-color);
 }
@@ -99,16 +102,17 @@
 }
 
 .inst-svg, .twit-svg {
-    fill: currentColor;
+    fill: transparent;
+    stroke: var(--pr-title-color);
 } 
 
 .footer-link-svg {
-   color: var(--accent-color);
+   transition:  stroke var(--transition-dur-and-func) ;
 }
 
 .inst-svg:is(:hover, :focus), 
 .twit-svg:is(:hover, :focus) {
-    fill: var(--accent-color);
+    stroke: var(--accent-color);
 } 
 
 @media screen and (min-width: 768px) {
@@ -116,6 +120,8 @@
         max-width: 768px;   
         padding-top: 50px; 
         padding-bottom: 50px;
+        padding-left: 32px;
+        padding-right: 32px;
     }  
 
     .footer-logo-section {
