--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -20,7 +20,7 @@
                   </a>
                 </li>
                 <li class="footer-twitter">
-                  <a href="" class="footer-lin-svg">
+                  <a href="" class="footer-link-svg">
                     <svg class="twit-svg" width="22" height="22">
                         <use href="../img/sprite.svg#icon-twitter"></use>
                     </svg>
