--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,9 +1,9 @@
-/* .header--fixed {
+.header--fixed {
   position: fixed;
   z-index: 9999;
   left: 0;
   top: 0;
- } */
+ }
 .logo-header {
   display: flex;
   font-weight: 700;
