--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -3,8 +3,6 @@
   padding-bottom: 72px;
 }
 .reviews-section-title {
-  font-style: normal;
-
   color: var(--sec-title-color);
 }
 .part-section-title {
@@ -27,12 +25,9 @@
 .name-of-reviewer {
   text-align: center;
 
-  font-style: normal;
   font-weight: 600;
   font-size: 18px;
   line-height: 1.33;
-
-  color: #111111;
 }
 .reviewer-wrapper {
   position: absolute;
@@ -55,7 +50,7 @@
   border-radius: 15px;
   box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
 
-  background: #ffffff;
+  background-color: transparent;
 }
 .review {
   width: 299px;
@@ -64,7 +59,6 @@
   padding-top: 104px;
   text-align: center;
 
-  font-style: normal;
   line-height: 1.29;
   letter-spacing: -0.02em;
 
