how-its-made-update

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,7 +21,7 @@
 /* @import url('./'); */
 
 /* <!---- How its made?  -----> */
-/* @import url('./'); */
+@import url('./how-its-made.css');
 
 /* <!---- Our products  -----> */
 /* @import url('./'); */
@@ -47,5 +47,3 @@
 
 /* <!---- Explore our new chocolate first ----> */
 /* @import url('./'); */
-
-
