--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header-fixed">
   <div class="container">
     <!--------------MOBILE HEADER--------------------->
     <div class="header-sup header-mobile">
