--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,12 +6,12 @@
       </p>
       <div class="all-button">
         <div class="hero-buttons">
-          <button type="button" class="buy-now">Buy now</button>
-          <button type="button" class="how-its">How it`s made</button>
+          <button type="button" class="buy-now" data-modal-open>Buy now</button>
+          <button type="button" class="how-its" href="#">How it`s made</button>
         </div>
         <div class="scroll-button">
           <p class="last-button-text">scroll down</p>
-          <button type="button" class="scroll">
+          <button type="button" class="scroll" href="#">
             <svg class="icon-scroll" width="16" height="16">
               <use href="../img/sprite.svg#icon-hero-scroll-down"></use>
             </svg>
