--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,14 +13,14 @@
             <div class="footer-social-media">
             <ul class="socials">
                 <li class="footer-instagram">
-                  <a href="" class="footer-link-svg">
+                  <a href="#" class="footer-link-svg">
                     <svg class="inst-svg" width="22" height="22">
                         <use href="../img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="footer-twitter">
-                  <a href="" class="footer-link-svg">
+                  <a href="#" class="footer-link-svg">
                     <svg class="twit-svg" width="22" height="22">
                         <use href="../img/sprite.svg#icon-twitter"></use>
                     </svg>
@@ -32,11 +32,11 @@
     </div>
 <div class="footer-filters">
     <ul class="footer-filters-items">
-        <li class="footer-item"><a href="" class="footer-link current">Home</a></li>
-        <li class="footer-item"><a href="" class="footer-link">How it's made?</a></li>
-        <li class="footer-item"><a href="" class="footer-link">Our products</a></li>
-        <li class="footer-item"><a href="" class="footer-link">Top sellers</a></li>
-        <li class="footer-item"><a href="" class="footer-link">Chocolate is loved</a></li>
+        <li class="footer-item"><a href="#" class="footer-link current">Home</a></li>
+        <li class="footer-item"><a href="#" class="footer-link">How it's made?</a></li>
+        <li class="footer-item"><a href="#" class="footer-link">Our products</a></li>
+        <li class="footer-item"><a href="#" class="footer-link">Top sellers</a></li>
+        <li class="footer-item"><a href="#" class="footer-link">Chocolate is loved</a></li>
     </ul>
 </div>
     </div>
