--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -99,6 +99,10 @@
   .our-products {
     padding: calc(100px / 2) 0;
   }
+
+  .container-slider{
+    gap: 32px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -109,11 +113,16 @@
   .our-products {
     padding: calc(128px / 2) 0;
   }
+
+  .container-slider{
+    gap: 32px;
+  }
 }
 
 
 /* <!---- OVERWRITE SWIPER.JS STYLES  -----> */
 .swiper-pagination-bullet {
+  background: var(--bg-circle-color);
   width: 13px;
   height: 13px;
 }
