--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -99,7 +99,7 @@
         </div>
       </div>
       <!-- If we need pagination -->
-      <div class="reviews-slider-pagination swiper-pagination"></div>
+      <div class="reviews-slider-pagination swiper-pagination-1"></div>
     </div>
 
     <button class="reviews-btn btn" type="button">Leave a review</button>
