--- a/src/partials/our-products-section.html
+++ b/src/partials/our-products-section.html
@@ -87,7 +87,7 @@
           </li>
         </ul>
       </div>
-      <div class="swiper-pagination"></div>
+      <div class="swiper-pagination-2"></div>
     </div>
   </div>
 </section>
