--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -52,7 +52,7 @@
   border-radius: 15px;
   box-shadow: 0px 9.04932px 26.5717px rgba(215, 228, 249, 0.25);
 
-  background-color: transparent;
+  background-color: var(--sec-text-color);
 }
 .review {
   width: 299px;
@@ -111,7 +111,7 @@
     background-color: var(--accent-color);
   }
 
-  .reviewr-slider-wrapper{
+  .reviewr-slider-wrapper {
     margin-bottom: 32px;
   }
 }
