--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,6 +20,9 @@
 /* <!-- Unique components  --> */
 /* @import url('./'); */
 
+/* <!------- Buy now  ------>  */
+/* @import url('./'); */
+
 /* <!---- How its made?  -----> */
 @import url('./how-its-made.css');
 
