explore-our-new

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,7 +49,7 @@
 /* @import url('./'); */
 
 /* <!---- Explore our new chocolate first ----> */
-/* @import url('./'); */
+@import url('./explore-our-new-chocolate-first.css');
 
 /* ----- btn-scroll-header ------ */
 @import url('./btn-scroll-header.css');
