--- a/src/partials/How-its-made.html
+++ b/src/partials/How-its-made.html
@@ -26,6 +26,13 @@
           "
           media="(min-width:375px)"
         />
+        <source
+          srcset="
+            ../img/how_its_made/How_its_made_mobile.jpg    1x,
+            ../img/how_its_made/How_its_made_mobile_2x.jpg 2x
+          "
+          media="(max-width:374px)"
+        />
 
         <img
           class="how-its-made-image"
