--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,7 +42,7 @@
 @import url('./subscribe.css');
 
 /* <!---- Footer -----> */
-/* @import url('./'); */
+@import url('./footer.css');
 
 /* <!------- Modal --------> */
 /* <!------- Buy now ------> */
