--- a/src/partials/How-its-made.html
+++ b/src/partials/How-its-made.html
@@ -40,7 +40,7 @@
           alt="video"
         />
         <svg width="35px" height="35px" class="how-its-made-icon">
-          <use href="../img/sprite.svg#icon-play-icon"></use>
+          <use href="../img/sprite.svg#icon-play-icon-chocolate"></use>
         </svg>
       </picture>
 
