--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
         <span class="logo-simply">SIMPLY</span>&nbsp;CHOCOLATE
         <span class="chocolate">
           <svg width="21" height="21">
-            <use href="../img/sprite.svg#icon-logo-chocolate"></use>
+            <use href="./img/sprite.svg#icon-logo-chocolate"></use>
           </svg>
         </span>
       </a>
@@ -17,14 +17,14 @@
         aria-controls="mobile-menu"
       >
         <svg class="icon-menu" width="21" height="21">
-          <use href="../img/sprite.svg#icon-icon-menu"></use>
+          <use href="./img/sprite.svg#icon-icon-menu"></use>
         </svg>
       </button>
     </div>
     <div class="hamburger-menu js-menu-container">
       <button class="modal-button js-close-menu" id="mobile-menu">
         <svg class="icon-close">
-          <use href="../img/sprite.svg#icon-close-tag"></use>
+          <use href="./img/sprite.svg#icon-close-tag"></use>
         </svg>
       </button>
       <nav class="header-nav">
