--- a/src/partials/explore-our-new-chocolate-first.html
+++ b/src/partials/explore-our-new-chocolate-first.html
@@ -4,12 +4,12 @@
   <div class="modal">
     <img
       class="img-style-radius"
-      src="../img/explore_our_new_chocolate_first/explore_desk_2x.jpg"
+      src="./img/explore_our_new_chocolate_first/explore_desk_2x.jpg"
       alt="photo"
     />
     <button type="button" data-modal-close class="modal-close">
       <svg class="explore-icon-modal-btn" width="28" height="28">
-        <use href="../img/sprite.svg#icon-close-tag"></use>
+        <use href="./img/sprite.svg#icon-close-tag"></use>
       </svg>
     </button>
     <p class="explore-modal-title">
