--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,14 +15,14 @@
                 <li class="footer-instagram">
                   <a href="#" class="footer-link-svg">
                     <svg class="inst-svg" width="22" height="22">
-                        <use href="../img/sprite.svg#icon-instagram"></use>
+                        <use href="./img/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="footer-twitter">
                   <a href="#" class="footer-link-svg">
                     <svg class="twit-svg" width="22" height="22">
-                        <use href="../img/sprite.svg#icon-twitter"></use>
+                        <use href="./img/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
