--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -36,7 +36,7 @@
             <a href="#" class="item-nav">How it`s made</a>
           </li>
           <li class="nav-list">
-            <a href="" class="item-nav">Our producrs</a>
+            <a href="#" class="item-nav">Our producrs</a>
           </li>
           <li class="nav-list">
             <a href="#" class="item-nav">Top sellers</a>
@@ -51,14 +51,14 @@
           <li class="social-item-menu">
             <a href="#" class="hamburger-link">
               <svg class="hamburger-icon-instagram" width="24" height="24">
-                <use href="../img/sprite.svg#icon-instagram"></use>
+                <use href="./img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item-menu">
             <a href="#" class="hamburger-link">
               <svg class="hamburger-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-twitter"></use>
+                <use href="./img/sprite.svg#icon-twitter"></use>
               </svg>
             </a>
           </li>
@@ -71,7 +71,7 @@
         <span class="logo-simply">SIMPLY</span>&nbsp;CHOCOLATE
         <span class="chocolate">
           <svg width="24" height="24">
-            <use href="../img/sprite.svg#icon-logo-chocolate"></use>
+            <use href="./img/sprite.svg#icon-logo-chocolate"></use>
           </svg>
         </span>
       </a>
@@ -98,14 +98,14 @@
         <li class="social-item-menu">
           <a href="#" class="hamburger-link">
             <svg class="hamburger-icon-instagram" width="24" height="24">
-              <use href="../img/sprite.svg#icon-instagram"></use>
+              <use href="./img/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="social-item-menu">
           <a href="#" class="hamburger-link">
             <svg class="hamburger-icon" width="24" height="24">
-              <use href="../img/sprite.svg#icon-twitter"></use>
+              <use href="./img/sprite.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
