--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -13,7 +13,7 @@
           <p class="last-button-text">scroll down</p>
           <button type="button" class="scroll" href="#">
             <svg class="icon-scroll" width="16" height="16">
-              <use href="../img/sprite.svg#icon-hero-scroll-down"></use>
+              <use href="./img/sprite.svg#icon-hero-scroll-down"></use>
             </svg>
           </button>
         </div>
