--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -11,8 +11,8 @@
         <div class="reviews-slider-item swiper-slide">
           <div class="reviewer-wrapper">
             <img class="photo-of-reviewer"
-              srcset="../img/reviews/victoria_dobrzhanska_reviews.jpg 1x, ../img/reviews/victoria_dobrzhanska_reviews_2x.jpg 2x"
-              src="../img/reviews/victoria_dobrzhanska_reviews.jpg" alt="The photo of Victoria Dobrzhanska">
+              srcset="./img/reviews/victoria_dobrzhanska_reviews.jpg 1x, ./img/reviews/victoria_dobrzhanska_reviews_2x.jpg 2x"
+              src="./img/reviews/victoria_dobrzhanska_reviews.jpg" alt="The photo of Victoria Dobrzhanska">
             <h3 class="name-of-reviewer">Victoria Dobrzhanska</h3>
           </div>
           <div class="review-wrapper">
@@ -25,8 +25,8 @@
         <div class="reviews-slider-item swiper-slide">
           <div class="reviewer-wrapper">
             <img class="photo-of-reviewer"
-              srcset="../img/reviews/nazar_babenko_reviews.jpg 1x, ../img/reviews/nazar_babenko_reviews_2x.jpg 2x"
-              src="../img/reviews/nazar_babenko_reviews.jpg" alt="The photo of Nazar Babenko">
+              srcset="./img/reviews/nazar_babenko_reviews.jpg 1x, ./img/reviews/nazar_babenko_reviews_2x.jpg 2x"
+              src="./img/reviews/nazar_babenko_reviews.jpg" alt="The photo of Nazar Babenko">
             <h3 class="name-of-reviewer">Nazar Babenko</h3>
           </div>
           <div class="review-wrapper">
@@ -40,8 +40,8 @@
         <div class="reviews-slider-item swiper-slide">
           <div class="reviewer-wrapper">
             <img class="photo-of-reviewer"
-              srcset="../img/reviews/olena_kampusch_reviews.jpg 1x, ../img/reviews/olena_kampusch_reviews_2x.jpg 2x"
-              src="../img/reviews/olena_kampusch_reviews.jpg" alt="The photo of Olena Kampusch">
+              srcset="./img/reviews/olena_kampusch_reviews.jpg 1x, ./img/reviews/olena_kampusch_reviews_2x.jpg 2x"
+              src="./img/reviews/olena_kampusch_reviews.jpg" alt="The photo of Olena Kampusch">
             <h3 class="name-of-reviewer">Olena Kampusch</h3>
           </div>
           <div class="review-wrapper">
@@ -55,8 +55,8 @@
         <div class="reviews-slider-item swiper-slide">
           <div class="reviewer-wrapper">
             <img class="photo-of-reviewer"
-              srcset="../img/reviews/natalia_sus_reviews.jpg 1x, ../img/reviews/natalia_sus_reviews_2x.jpg 2x"
-              src="../img/reviews/natalia_sus_reviews.jpg" alt="The photo of Natalia Sus">
+              srcset="./img/reviews/natalia_sus_reviews.jpg 1x, ./img/reviews/natalia_sus_reviews_2x.jpg 2x"
+              src="./img/reviews/natalia_sus_reviews.jpg" alt="The photo of Natalia Sus">
             <h3 class="name-of-reviewer">Natalia Sus</h3>
           </div>
           <div class="review-wrapper">
@@ -70,8 +70,8 @@
         <div class="reviews-slider-item swiper-slide">
           <div class="reviewer-wrapper">
             <img class="photo-of-reviewer"
-              srcset="../img/reviews/danilo_nottingham_reviews.jpg 1x, ../img/reviews/danilo_nottingham_reviews_2x.jpg 2x"
-              src="../img/reviews/danilo_nottingham_reviews.jpg" alt="The photo of Danilo Nottingham">
+              srcset="./img/reviews/danilo_nottingham_reviews.jpg 1x, ./img/reviews/danilo_nottingham_reviews_2x.jpg 2x"
+              src="./img/reviews/danilo_nottingham_reviews.jpg" alt="The photo of Danilo Nottingham">
             <h3 class="name-of-reviewer">Danilo Nottingham</h3>
           </div>
           <div class="review-wrapper">
@@ -86,8 +86,8 @@
         <div class="reviews-slider-item swiper-slide">
           <div class="reviewer-wrapper">
             <img class="photo-of-reviewer"
-              srcset="../img/reviews/irina_tydnyuk_reviews.jpg 1x,../img/reviews/irina_tydnyuk_reviews_2x.jpg 2x"
-              src="../img/reviews/irina_tydnyuk_reviews.jpg" alt="The photo of Irina Tydnyuk">
+              srcset="./img/reviews/irina_tydnyuk_reviews.jpg 1x, ./img/reviews/irina_tydnyuk_reviews_2x.jpg 2x"
+              src="./img/reviews/irina_tydnyuk_reviews.jpg" alt="The photo of Irina Tydnyuk">
             <h3 class="name-of-reviewer">Irina Tydnyuk</h3>
           </div>
           <div class="review-wrapper">
