--- a/src/partials/How-its-made.html
+++ b/src/partials/How-its-made.html
@@ -7,40 +7,40 @@
       <picture class="how-its-made-img">
         <source
           srcset="
-            ../img/how_its_made/How_its_made_desk.jpg    1x,
-            ../img/how_its_made/How_its_made_desk_2x.jpg 2x
+            ./img/how_its_made/How_its_made_desk.jpg    1x,
+            ./img/how_its_made/How_its_made_desk_2x.jpg 2x
           "
           media="(min-width:1200px)"
         />
         <source
           srcset="
-            ../img/how_its_made/How_its_made_tablet.jpg    1x,
-            ../img/how_its_made/How_its_made_tablet_2x.jpg 2x
+            ./img/how_its_made/How_its_made_tablet.jpg    1x,
+            ./img/how_its_made/How_its_made_tablet_2x.jpg 2x
           "
           media="(min-width:768px)"
         />
         <source
           srcset="
-            ../img/how_its_made/How_its_made_mobile.jpg    1x,
-            ../img/how_its_made/How_its_made_mobile_2x.jpg 2x
+            ./img/how_its_made/How_its_made_mobile.jpg    1x,
+            ./img/how_its_made/How_its_made_mobile_2x.jpg 2x
           "
           media="(min-width:375px)"
         />
         <source
           srcset="
-            ../img/how_its_made/How_its_made_mobile.jpg    1x,
-            ../img/how_its_made/How_its_made_mobile_2x.jpg 2x
+            ./img/how_its_made/How_its_made_mobile.jpg    1x,
+            ./img/how_its_made/How_its_made_mobile_2x.jpg 2x
           "
           media="(max-width:374px)"
         />
 
         <img
           class="how-its-made-image"
-          src="../img/how_its_made/How_its_made_mobile.jpg"
+          src="./img/how_its_made/How_its_made_mobile.jpg"
           alt="video"
         />
         <svg width="35px" height="35px" class="how-its-made-icon">
-          <use href="../img/sprite.svg#icon-play-icon-chocolate"></use>
+          <use href="./img/sprite.svg#icon-play-icon-chocolate"></use>
         </svg>
       </picture>
 
