--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,7 +46,7 @@
 
 
 /* <!---- Leave a review about our chocolate ----> */
-
+@import url("./modal-review.css");
 
 /* <!---- Explore our new chocolate first ----> */
 @import url('./explore-our-new-chocolate-first.css');
