--- a/src/partials/modal-review.html
+++ b/src/partials/modal-review.html
@@ -2,7 +2,7 @@
   <div class="modal-review">
     <button class="review-close-btn" type="button" data-modal-close-1>
       <svg width="24" height="24">
-        <use href="../img/sprite.svg#close-modal-review"></use>
+        <use href="./img/sprite.svg#close-modal-review"></use>
       </svg>
     </button>
     <h2 class="modal-review-title">
@@ -34,7 +34,7 @@
           />
           <div class="country-code-wrap">
             <svg width="24" height="24">
-              <use href="../img/sprite.svg#icon-flag"></use>
+              <use href="./img/sprite.svg#icon-flag"></use>
             </svg>
             <span class="country-code">+380</span>
           </div>
