--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,13 +5,17 @@
   |============================
 */
 
+
 /* <!------- Reset -------> */
+
 @import url('./basic-styles.css');
 
 /* <!----- Header  ------> */
+
 @import url('./header.css');
 
 /* <!------- Hero  -------> */
+
 @import url('./hero.css');
 
 /* <!---- Advantages  ----> */
@@ -19,29 +23,38 @@
 
 /* <!-- Unique components  --> */
 
+@import url('./unique-components.css');
 
 /* <!------- Buy now  ------>  */
 
 
 /* <!---- How its made?  -----> */
+
 @import url('./how-its-made.css');
 
 /* <!---- Our products  -----> */
+
 @import url('./our-products.css');
 
 /* <!---- Top sellers  -----> */
+
 @import url('./top-sellers.css');
 
 /* <!---- Reviews  -----> */
+
 @import url('./reviews.css');
 
 /* <!---- Subscribe -----> */
+
 @import url('./subscribe.css');
 
 /* <!---- Footer -----> */
+
 @import url('./footer.css');
 
 /* <!------- Modal --------> */
+
+
 /* <!------- Buy now ------> */
 
 
@@ -49,7 +62,9 @@
 
 
 /* <!---- Explore our new chocolate first ----> */
+
 @import url('./explore-our-new-chocolate-first.css');
 
 /* ----- btn-scroll-header ------ */
+
 @import url('./btn-scroll-header.css');
