--- a/src/partials/explore-our-new-chocolate-first.html
+++ b/src/partials/explore-our-new-chocolate-first.html
@@ -1,13 +1,13 @@
 <!-- modal -->
 
-<div class="backdrop" data-modal>
+<div class="backdrop is-hidden-1" data-modal-1>
   <div class="modal">
     <img
       class="img-style-radius"
       src="./img/explore_our_new_chocolate_first/explore_desk_2x.jpg"
       alt="photo"
     />
-    <button type="button" data-modal-close class="modal-close">
+    <button type="button" class="modal-close" data-modal-close-1>
       <svg class="explore-icon-modal-btn" width="28" height="28">
         <use href="./img/sprite.svg#icon-close-tag"></use>
       </svg>
