--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -6,5 +6,7 @@
     finest ingredients and handcrafted with the utmost care, each piece is a
     work of art that is sure to please.
   </p>
-  <button class="subscribe-btn btn" type="button">Subscribe</button>
+  <button type="button" class="subscribe-btn btn" data-modal-open-1>
+    Subscribe
+  </button>
 </section>
