--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -94,6 +94,8 @@
 @media screen and (min-width: 768px) {
   .title{
     margin-bottom: 50px;
+    font-size: 24px;
+    line-height: 1.17;
   }
 
   .our-products {
@@ -108,6 +110,8 @@
 @media screen and (min-width: 1200px) {
   .title{
     margin-bottom: 50px;
+    font-size: 24px;
+    line-height: 1.17;
   }
 
   .our-products {
