--- a/src/css/modal-review.css
+++ b/src/css/modal-review.css
@@ -11,7 +11,7 @@
   border-radius: 15px;
   overflow-y: scroll;
 }
-.modal-review.is-hidden {
+.backdrop.is-hidden-2 {
   scale: 0;
   visibility: hidden;
   pointer-events: none;
