--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -10,12 +10,12 @@
         </p>
         <ul class="unique-list">
             <li class="unique-item chocolate-item">
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <div class="unique-front">
                         <img srcset="
-                ../img/unique_components/chocolate_unique_desk.png    1x,
-                ../img/unique_components/chocolate_unique_desk_2x.png 2x
-              " src="../img/unique_components/chocolate_unique_desk.png" alt="chocolate" class="unique-front-img" width="224" height="171" />
+                ./img/unique_components/chocolate_unique_desk.png    1x,
+                ./img/unique_components/chocolate_unique_desk_2x.png 2x
+              " src="./img/unique_components/chocolate_unique_desk.png" alt="chocolate" class="unique-front-img" width="224" height="171" />
                         <p class="unique-front-text">MILK CHOCOLATE</p>
                     </div>
                     <div class="unique-back">
@@ -35,15 +35,15 @@
                             is sold in the United States and Europe, increasingly large amounts are consumed in China and Latin America.
                         </p>
                     </div>
-                </a>
+                </div>
             </li>
             <li class="unique-item milk-semi-item">
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <div class="unique-front">
                         <img srcset="
-                ../img/unique_components/milk_unique_desk.png    1x,
-                ../img/unique_components/milk_unique_desk_2x.png 2x
-              " src="../img/unique_components/milk_unique_desk.png" alt="milk" class="unique-front-img" width="224" height="171" />
+                ./img/unique_components/milk_unique_desk.png    1x,
+                ./img/unique_components/milk_unique_desk_2x.png 2x
+              " src="./img/unique_components/milk_unique_desk.png" alt="milk" class="unique-front-img" width="224" height="171" />
                         <p class="unique-front-text milk-semi-text">MILK</p>
                     </div>
                     <div class="unique-back">
@@ -63,15 +63,15 @@
                             contains antibodies that strengthen the immune system, and thus reduces the risk of many diseases. Milk contains many nutrients, including protein and lactose.
                         </p>
                     </div>
-                </a>
+                </div>
             </li>
             <li class="unique-item nuts-item">
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <div class="unique-front">
                         <img srcset="
-                ../img/unique_components/nuts_unique_desk.png    1x,
-                ../img/unique_components/nuts_unique_desk_2x.png 2x
-              " src="../img/unique_components/nuts_unique_desk.png" alt="nuts" class="unique-front-img" width="224" height="171" />
+                ./img/unique_components/nuts_unique_desk.png    1x,
+                ./img/unique_components/nuts_unique_desk_2x.png 2x
+              " src="./img/unique_components/nuts_unique_desk.png" alt="nuts" class="unique-front-img" width="224" height="171" />
                         <p class="unique-front-text">NUTS</p>
                     </div>
                     <div class="unique-back">
@@ -91,15 +91,15 @@
                             and plant protein. Plus, they’re great on their own, paired with fruit, or added to dishes like salads, desserts, and grains.
                         </p>
                     </div>
-                </a>
+                </div>
             </li>
             <li class="unique-item milk-semi-item">
-                <a href="#" class="cards-link">
+                <div class="cards-link">
                     <div class="unique-front">
                         <img srcset="
-                ../img/unique_components/semi_sweet_unique_desk.png    1x,
-                ../img/unique_components/semi_sweet_unique_desk_2x.png 2x
-              " src="../img/unique_components/semi_sweet_unique_desk.png" alt="semi" class="unique-front-img" width="224" height="171" />
+                ./img/unique_components/semi_sweet_unique_desk.png    1x,
+                ./img/unique_components/semi_sweet_unique_desk_2x.png 2x
+              " src="./img/unique_components/semi_sweet_unique_desk.png" alt="semi" class="unique-front-img" width="224" height="171" />
                         <p class="unique-front-text milk-semi-text">
                             SEMI - SWEET CHOCOLATE
                         </p>
@@ -121,7 +121,7 @@
                             has a slightly bitter taste whereas milk chocolate is sweeter and more mellow. This delectable flavor of chocolate is very versatile.
                         </p>
                     </div>
-                </a>
+                </div>
             </li>
         </ul>
     </div>
