--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -47,9 +47,9 @@
     color: var(--accent-color);
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 320px) {
     .subsribe-section {
-        max-width: 375px;
+        max-width: 676px;
     }
 
     @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
@@ -77,7 +77,7 @@
 
 @media screen and (min-width: 768px) {
     .subsribe-section {
-        max-width: 768px;
+        max-width: 1199px;
     }
 
     .text-subscribe{
@@ -105,7 +105,7 @@
 
 @media screen and (min-width: 1200px) {
     .subsribe-section {
-        max-width: 1199px;
+        max-width: 100%;
     }
 
     .text-subscribe{
