--- a/src/css/explore-our-new-chocolate-first.css
+++ b/src/css/explore-our-new-chocolate-first.css
@@ -36,9 +36,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 38px;
-    height: 38px;
+    width: 28px;
+    height: 28px;
     border-radius: 50%;
+    fill: var(--pr-title-color);
     background: none;
     border: none;
     cursor: pointer;
@@ -98,9 +99,9 @@
 }
 
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 311px) {
     .modal {
-        max-width: 375px;
+        max-width: 320px;
     }
 
     .modal {
@@ -110,8 +111,8 @@
 
     .modal-close {
     position: absolute;
-    top: 5px;
-    right: 4px;
+    top: 15px;
+    right: 14px;
     }
 
     .img-style-radius {
@@ -154,7 +155,7 @@
 
 @media screen and (min-width: 768px) {
     .modal {
-        max-width: 768px;
+        max-width: 767px;
     }
 
     .modal {
@@ -203,7 +204,7 @@
 
 @media screen and (min-width: 1200px) {
     .modal {
-        max-width: 1200px;
+        max-width: 1199px;
     }
 
     .modal {
