--- a/src/partials/explore-our-new-chocolate-first.html
+++ b/src/partials/explore-our-new-chocolate-first.html
@@ -8,8 +8,8 @@
       alt="photo"
     />
     <button type="button" data-modal-close class="modal-close">
-      <svg class="explore-icon-modal-btn" width="28" height="28">
-        <use href="../img/sprite.svg#icon-close-tag"></use>
+      <svg class="explore-icon-modal-btn" width="24" height="24">
+        <use href="../img/sprite.svg#icon-vector"></use>
       </svg>
     </button>
     <p class="explore-modal-title">
