--- a/src/css/modal-review.css
+++ b/src/css/modal-review.css
@@ -1,22 +1,32 @@
+.backdrop {
+  width: 100%;
+  height: 100%;
+  background: rgba(46, 47, 66, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  transition: opacity 0.35s cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 0.35s cubic-bezier(0.4, 0, 0.2, 1);
+}
 .modal-review {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 100%;
+  width: 90%;
   padding: 32px 24px;
   background-color: #fafafa;
   border-radius: 15px;
-  overflow-y: scroll;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden-2 {
   scale: 0;
   visibility: hidden;
   pointer-events: none;
-  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop.is-hidden-2 .modal-review {
+  transform: translate(-50%, -50%) scale(0);
 }
 .review-close-btn {
   position: absolute;
