--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -10,7 +10,7 @@
 }
 .reviews-slider {
   width: 100%;
-  height: 275px;
+  min-height: 275px;
   margin-bottom: 32px;
 }
 
@@ -46,7 +46,7 @@
   bottom: 0;
 
   width: 100%;
-  height: 200px;
+  min-height: 200px;
 
   border: 1px solid var(--bg-circle-color);
   border-radius: 15px;
@@ -55,7 +55,7 @@
   background-color: var(--sec-text-color);
 }
 .review {
-  width: 299px;
+  max-width: 299px;
   min-height: 54px;
   margin: 0 auto;
   padding-top: 104px;
@@ -82,7 +82,7 @@
     margin-bottom: 50px;
   }
   .reviews-slider {
-    height: 285px;
+    min-height: 285px;
     margin-bottom: 50px;
   }
   .reviewr-slider-wrapper {
@@ -109,9 +109,5 @@
   .reviews-btn:hover {
     color: var(--sec-text-color);
     background-color: var(--accent-color);
-  }
-
-  .reviewr-slider-wrapper {
-    margin-bottom: 32px;
   }
 }
